test/official_tests/if/var_in_else.lox
// error: {"line":2,"message":"expect expression","type":"ParseError"}
if (true) "ok"; else var foo;
